# Audio-Editor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
Source/Application/: CMakeLists.txt  Editor.cpp
Source/Application/Audio/Device/: ProjectIODevice.h
Source/Application/Audio/Document/: AudioDocument.cpp  AudioDocument.h
Source/Application/Audio/Playback/: AudioPlayback.cpp  AudioPlayback.h
Source/Application/Core/: Core.h  Data.h
Source/Application/Core/Definitions/: BitwiseOperator.h  Definitions.h  GlmNames.h  Singleton.h
Source/Application/Core/Project/: Project.cpp  Project.h
Source/Application/QTUtils/Audio/IODevice/: IODevice.h
Source/Application/QTUtils/Audio/Playback/: AudioPlayback.cpp  AudioPlayback.h
Source/Application/QTUtils/Helper/: Color.h
Source/Application/QTUtils/Main/: MainWindow.cpp  MainWindow.h
Source/Application/QTUtils/Widgets/Editor/: EditorWidget.cpp  EditorWidget.h
Source/Application/QTUtils/Widgets/Timeline/: TimelineView.cpp  TimelineView.h
Source/Application/QTUtils/Widgets/TrackHeader/: TrackHeaderView.cpp  TrackHeaderView.h
Source/Application/QTUtils/Widgets/Waveform/: WaveformView.cpp  WaveformView.h
